src/test/deca/codegen/valid/renduFinal/32cast_object_to_objectsup.deca
// Description:
//      Utilisation du cast
//      => Cas spécifique : cast d'un objet classe fille vers un objet de sa classe mère
//
// Resultats:
//     
//

class B {

}

class A extends B {

}

{
    A a = new A();
    B b = new B();
    b = (B)(a);
}
