src/test/deca/codegen/invalid/renduFinal/03cast_objectsup_to_object.deca
// Description:
//      Utilisation du cast
//      => On ne peut pas cast un objet d'une classe mère dans une classe fille.
//
// Resultats:
//    Erreur à l'exécution
//    Ligne 20 : cast invalide

class B {

}

class A extends B {

}

{
    A a = new A();
    B b = new B();
    a = (A)(b);
}
